--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
+    "heroku": "^7.59.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0"
   },
